--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ header {
 }
 
 .instructions {
-    font-size: 18px;
+    font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: darkred;
     background-color: lightgreen;
@@ -28,6 +28,15 @@ header {
 
 p.intro {
     margin: 0;
+}
+
+#gnomes {
+    text-align: center;
+}
+
+img {
+    width: 100px;
+    margin: 0px 8px 0px 8px;
 }
 
 div.start {
