--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,10 +15,11 @@ header {
 }
 
 .instructions {
-    font-size: 14px;
+    font-size: 20px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: darkred;
     background-color: lightgreen;
+    text-align: center;
     padding: 5px 10px 15px 10px;
     margin-left: 20%;
     margin-right: 20%;
@@ -28,6 +29,18 @@ header {
 
 p.intro {
     margin: 0;
+}
+
+#winner {
+    text-align: center;
+    font-size: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#loser {
+    text-align: center;
+    font-size: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #gnomes {
@@ -44,6 +57,10 @@ div.start {
     text-align: center;    
 }
 
+div.replay {
+    padding-top: 10px;
+    text-align: center;    
+}
 
 #marketvalue {
     float:left;
